Lists, Conditionals, and Computed Properties

--- a/index.html
+++ b/index.html
@@ -1,49 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    html, body {
-      height: 100%;
-    }
 
-    body {
-      display: grid;
-      place-items: center;
-    }
-
-    .text-red {
-      color: red;
-    }
-
-    .text-green {
-      color: green;
-    }
   </style>
 </head>
-<body>
+<body class="h-full grid place-items-center">
 
   <div id="app">
-    <button @click="toggle" :class="active ? 'text-red' : 'text-green'">Click Me</button>
-  </div>
-  <script>
+    <section v-show="inProgressAssignments.length">
+      <h2 class="font-bold">In Progress</h2>
 
-    Vue.createApp({
-      data() {
+      <ul>
+        <li v-for="assignment in inProgressAssignments"
+            :key="assignment.id"
+        >
+          <label>
+            {{ assignment.name }}
+            <input type="checkbox" v-model="assignment.complete">
+          </label>
+        </li>
+      </ul>
+
+    </section>
+
+    <section v-show="completedAssignments.length">
+      <h2 class="font-bold mt-2">Completed Assignments</h2>
+
+      <ul>
+        <li v-for="assignment in completedAssignments"
+            :key="assignment.id"
+        >
+          <label>
+            {{ assignment.name }}
+            <input type="checkbox" v-model="assignment.complete">
+          </label>
+        </li>
+      </ul>
+
+    </section>
+  </div>
+
+  <script>
+    let app = {
+      data(){
         return {
-          active: false
+          assignments: [
+            {name: 'Task 1', complete: false, id: 1},
+            {name: 'Task 2', complete: false, id: 2},
+            {name: 'Task 3', complete: false, id: 3},
+          ]
         }
       },
-      methods: {
-        toggle(){
-          this.active = ! this.active;
+      computed:{
+        completedAssignments(){
+          return this.assignments.filter(a => a.complete);
+        },
+        inProgressAssignments(){
+          return this.assignments.filter(a => ! a.complete);
         }
       }
-    }).mount("#app");
+    };
+
+    Vue.createApp(app).mount("#app");
   </script>
 </body>
 </html>
