Custom Vue Component

--- a/index.html
+++ b/index.html
@@ -14,57 +14,22 @@
 <body class="h-full grid place-items-center">
 
   <div id="app">
-    <section v-show="inProgressAssignments.length">
-      <h2 class="font-bold">In Progress</h2>
-
-      <ul>
-        <li v-for="assignment in inProgressAssignments"
-            :key="assignment.id"
-        >
-          <label>
-            {{ assignment.name }}
-            <input type="checkbox" v-model="assignment.complete">
-          </label>
-        </li>
-      </ul>
-
-    </section>
-
-    <section v-show="completedAssignments.length">
-      <h2 class="font-bold mt-2">Completed Assignments</h2>
-
-      <ul>
-        <li v-for="assignment in completedAssignments"
-            :key="assignment.id"
-        >
-          <label>
-            {{ assignment.name }}
-            <input type="checkbox" v-model="assignment.complete">
-          </label>
-        </li>
-      </ul>
-
-    </section>
+    <app-button>Test</app-button>
   </div>
 
   <script>
     let app = {
-      data(){
-        return {
-          assignments: [
-            {name: 'Task 1', complete: false, id: 1},
-            {name: 'Task 2', complete: false, id: 2},
-            {name: 'Task 3', complete: false, id: 3},
-          ]
-        }
-      },
-      computed:{
-        completedAssignments(){
-          return this.assignments.filter(a => a.complete);
+      components: {
+        'app-button': {
+          template: '<button class="bg-gray-200 hover:bg-gray-400 border rounded p-3 disabled:cursor-not-allowed" :disabled="processing">' +
+                  '<slot></slot>' +
+                  '</button>',
+          data(){
+            return {
+              processing: true
+            }
+          }
         },
-        inProgressAssignments(){
-          return this.assignments.filter(a => ! a.complete);
-        }
       }
     };
 
