--- a/index.html
+++ b/index.html
@@ -1,39 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="h-full">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-
-  </style>
+    <meta charset="UTF-8">
+    <title>Episode 5: Extract Components to Their Own Files</title>
+    <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="h-full grid place-items-center">
+    <div id="app">
+        <app-button>Submit</app-button>
+    </div>
 
-  <div id="app">
-    <app-button>Test</app-button>
-  </div>
+    <script type="module">
+        import AppButton from "./js/components/AppButton.js";
 
-  <script>
-    let app = {
-      components: {
-        'app-button': {
-          template: '<button class="bg-gray-200 hover:bg-gray-400 border rounded p-3 disabled:cursor-not-allowed" :disabled="processing">' +
-                  '<slot></slot>' +
-                  '</button>',
-          data(){
-            return {
-              processing: true
+        let app = {
+            components: {
+                'app-button': AppButton
             }
-          }
-        },
-      }
-    };
+        };
 
-    Vue.createApp(app).mount("#app");
-  </script>
+        Vue.createApp(app).mount('#app');
+    </script>
 </body>
 </html>
